--- a/src/gui/src/UI/PreferencesDialog_UI.ui
+++ b/src/gui/src/UI/PreferencesDialog_UI.ui
@@ -948,10 +948,10 @@
       <widget class="QFrame" name="frame">
        <property name="geometry">
         <rect>
-         <x>400</x>
+         <x>410</x>
          <y>0</y>
          <width>121</width>
-         <height>111</height>
+         <height>141</height>
         </rect>
        </property>
        <property name="frameShape">
@@ -963,20 +963,20 @@
        <widget class="QLabel" name="label_5">
         <property name="geometry">
          <rect>
-          <x>10</x>
+          <x>0</x>
           <y>10</y>
           <width>111</width>
           <height>20</height>
          </rect>
         </property>
         <property name="text">
-         <string>Pad 1-8 Sensing</string>
+         <string>Pad 1-8 Retrigger</string>
         </property>
        </widget>
-       <widget class="QSpinBox" name="PadSensingSpinBox">
+       <widget class="QSpinBox" name="PadRetriggerSpinBox">
         <property name="geometry">
          <rect>
-          <x>30</x>
+          <x>20</x>
           <y>50</y>
           <width>51</width>
           <height>21</height>
@@ -986,7 +986,23 @@
          <number>1</number>
         </property>
         <property name="maximum">
-         <number>1024</number>
+         <number>1000</number>
+        </property>
+        <property name="value">
+         <number>70</number>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_9">
+        <property name="geometry">
+         <rect>
+          <x>90</x>
+          <y>50</y>
+          <width>21</width>
+          <height>18</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>ms</string>
         </property>
        </widget>
       </widget>
@@ -995,8 +1011,8 @@
         <rect>
          <x>110</x>
          <y>0</y>
-         <width>291</width>
-         <height>231</height>
+         <width>301</width>
+         <height>271</height>
         </rect>
        </property>
        <property name="frameShape">
@@ -1009,9 +1025,9 @@
         <property name="geometry">
          <rect>
           <x>220</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_33">
@@ -1044,6 +1060,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_8">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_8">
            <property name="minimum">
             <number>21</number>
@@ -1063,8 +1092,8 @@
          <rect>
           <x>10</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -1103,6 +1132,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_1">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_1">
            <property name="minimum">
             <number>21</number>
@@ -1122,8 +1164,8 @@
          <rect>
           <x>220</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_29">
@@ -1156,6 +1198,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_4">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_4">
            <property name="minimum">
             <number>21</number>
@@ -1175,8 +1230,8 @@
          <rect>
           <x>80</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_27">
@@ -1215,6 +1270,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_2">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_2">
            <property name="minimum">
             <number>21</number>
@@ -1234,8 +1302,8 @@
          <rect>
           <x>150</x>
           <y>10</y>
-          <width>62</width>
-          <height>101</height>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_28">
@@ -1268,6 +1336,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_3">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_3">
            <property name="minimum">
             <number>21</number>
@@ -1286,9 +1367,9 @@
         <property name="geometry">
          <rect>
           <x>150</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_32">
@@ -1321,6 +1402,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_7">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_7">
            <property name="minimum">
             <number>21</number>
@@ -1339,9 +1433,9 @@
         <property name="geometry">
          <rect>
           <x>80</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_31">
@@ -1374,6 +1468,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_6">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_6">
            <property name="minimum">
             <number>21</number>
@@ -1392,9 +1499,9 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>120</y>
-          <width>62</width>
-          <height>101</height>
+          <y>140</y>
+          <width>61</width>
+          <height>121</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_30">
@@ -1427,6 +1534,19 @@
           </widget>
          </item>
          <item>
+          <widget class="QSpinBox" name="sensingSpinBox_5">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>1024</number>
+           </property>
+           <property name="value">
+            <number>250</number>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QSpinBox" name="notespinBoxPad_5">
            <property name="minimum">
             <number>21</number>
@@ -1448,7 +1568,7 @@
          <x>10</x>
          <y>0</y>
          <width>101</width>
-         <height>231</height>
+         <height>271</height>
         </rect>
        </property>
        <property name="frameShape">
@@ -1461,7 +1581,7 @@
         <property name="geometry">
          <rect>
           <x>30</x>
-          <y>50</y>
+          <y>40</y>
           <width>61</width>
           <height>20</height>
          </rect>
@@ -1477,7 +1597,7 @@
         <property name="geometry">
          <rect>
           <x>50</x>
-          <y>80</y>
+          <y>100</y>
           <width>41</width>
           <height>20</height>
          </rect>
@@ -1517,7 +1637,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>120</y>
+          <y>190</y>
           <width>81</width>
           <height>34</height>
          </rect>
@@ -1530,7 +1650,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>170</y>
+          <y>230</y>
           <width>81</width>
           <height>34</height>
          </rect>
@@ -1539,14 +1659,30 @@
          <string>Write Config</string>
         </property>
        </widget>
+       <widget class="QLabel" name="label_87">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>70</y>
+          <width>61</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Sensing</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
       </widget>
       <widget class="QFrame" name="frame_4">
        <property name="geometry">
         <rect>
-         <x>400</x>
-         <y>120</y>
-         <width>120</width>
-         <height>111</height>
+         <x>410</x>
+         <y>140</y>
+         <width>121</width>
+         <height>131</height>
         </rect>
        </property>
        <property name="frameShape">
