--- a/src/gui/src/UI/PreferencesDialog_UI.ui
+++ b/src/gui/src/UI/PreferencesDialog_UI.ui
@@ -552,12 +552,15 @@
               </size>
              </property>
              <property name="text">
-              <string>Input</string>
+              <string>Input/Output</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QComboBox" name="midiPortComboBox"/>
+           </item>
+           <item>
+            <widget class="QComboBox" name="midiPortOutputComboBox"/>
            </item>
           </layout>
          </item>
@@ -948,7 +951,7 @@
       <widget class="QFrame" name="frame">
        <property name="geometry">
         <rect>
-         <x>410</x>
+         <x>400</x>
          <y>0</y>
          <width>121</width>
          <height>141</height>
@@ -1011,7 +1014,7 @@
         <rect>
          <x>110</x>
          <y>0</y>
-         <width>301</width>
+         <width>291</width>
          <height>271</height>
         </rect>
        </property>
@@ -1679,7 +1682,7 @@
       <widget class="QFrame" name="frame_4">
        <property name="geometry">
         <rect>
-         <x>410</x>
+         <x>400</x>
          <y>140</y>
          <width>121</width>
          <height>131</height>
